--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js --progress",
-    "build:prod": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js --progress",
+    "deplot": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js --progress",
     "lint:css": "npx stylelint 'src/scss/**/*.scss' --syntax scss",
     "lint:js": "npx eslint 'src/js/**/*.js' --color"
   },
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dwilches/interaction-motion-experiments.git"
+    "url": "git+https://github.com/danielwil92/interaction-motion-experiments.git"
   },
   "browserslist": {
     "production": [
@@ -58,6 +58,7 @@
     "mini-css-extract-plugin": "^1.3.4",
     "postcss": "^8.2.4",
     "postcss-loader": "^4.2.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
