--- a/.editorconfig
+++ b/.editorconfig
@@ -10,13 +10,13 @@ insert_final_newline = true
 # Set default charset
 [*.{pug,js,jsx,html}]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
 # Set default charset
 [*.sass]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 1
 trim_trailing_whitespace = true
