[Scroll Alignment] | First Approach using Scroll Magic

--- a/package.json
+++ b/package.json
@@ -81,5 +81,10 @@
     "webpack-merge": "^5.7.3",
     "workbox-webpack-plugin": "^6.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gsap": "^3.6.0",
+    "scrollmagic": "^2.0.8",
+    "scrollmagic-plugin-gsap": "^1.0.4",
+    "scrollmagic-plugins": "^1.0.8"
+  }
 }
