--- a/package.json
+++ b/package.json
@@ -81,5 +81,7 @@
     "webpack-merge": "^5.7.3",
     "workbox-webpack-plugin": "^6.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gsap": "^3.6.1"
+  }
 }
